{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 23,
  "lineage": "7110377c-351d-3827-f11c-aa12ace66702",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04023d4f5a5b89138",
            "public_dns": "ec2-13-251-179-80.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.179.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:internet-gateway/igw-081c2d02e1f2fae11",
            "id": "igw-081c2d02e1f2fae11",
            "owner_id": "241647851765",
            "tags": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04023d4f5a5b89138",
            "id": "nat-020e58a668f724e5e",
            "network_interface_id": "eni-077c78ec9a85af251",
            "private_ip": "10.0.8.243",
            "public_ip": "13.251.179.80",
            "subnet_id": "subnet-0947db936205b0476",
            "tags": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089b528b87be5a16c",
            "owner_id": "241647851765",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-020e58a668f724e5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-rt"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-058df142e7f8fb592",
            "owner_id": "241647851765",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081c2d02e1f2fae11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-rt"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e0ebdb07a875a20",
            "route_table_id": "rtb-089b528b87be5a16c",
            "subnet_id": "subnet-0d368bc6a01ac90f7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet1",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f91ccadd7015d74",
            "route_table_id": "rtb-089b528b87be5a16c",
            "subnet_id": "subnet-06e74828a7122f7a6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet2",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efb5ff58941bcfe4",
            "route_table_id": "rtb-089b528b87be5a16c",
            "subnet_id": "subnet-04490a6656c49827e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet5",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082496b5aeb974a0b",
            "route_table_id": "rtb-089b528b87be5a16c",
            "subnet_id": "subnet-02d4e2818c850bdb3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet6",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d50d10731cc156d",
            "route_table_id": "rtb-058df142e7f8fb592",
            "subnet_id": "subnet-043fc8a4afb19fd9a"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0376f34af5db2443b",
            "route_table_id": "rtb-058df142e7f8fb592",
            "subnet_id": "subnet-05f2e47ddd22d1f02"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b22ba2cee6cc661",
            "route_table_id": "rtb-058df142e7f8fb592",
            "subnet_id": "subnet-03fb8f1712c94a943"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet7",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c924744bd7dfcdd3",
            "route_table_id": "rtb-058df142e7f8fb592",
            "subnet_id": "subnet-0947db936205b0476"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet8",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-0d368bc6a01ac90f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d368bc6a01ac90f7",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "app-subnet-1"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-06e74828a7122f7a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06e74828a7122f7a6",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "app-subnet-2"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-043fc8a4afb19fd9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-043fc8a4afb19fd9a",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "elb-subnet-1"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-05f2e47ddd22d1f02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05f2e47ddd22d1f02",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "elb-subnet-2"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-04490a6656c49827e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-04490a6656c49827e",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "db-subnet-1"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-02d4e2818c850bdb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-02d4e2818c850bdb3",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-03fb8f1712c94a943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-03fb8f1712c94a943",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "nat-subnet-1"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:subnet/subnet-0947db936205b0476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0947db936205b0476",
            "map_public_ip_on_launch": false,
            "owner_id": "241647851765",
            "tags": {
              "Name": "nat-subnet-2"
            },
            "vpc_id": "vpc-001f1563dafb49458"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:241647851765:vpc/vpc-001f1563dafb49458",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c66a060ab2cab85",
            "default_route_table_id": "rtb-0083595fe6fad743d",
            "default_security_group_id": "sg-0829a02af01224742",
            "dhcp_options_id": "dopt-d5e2c2b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001f1563dafb49458",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0083595fe6fad743d",
            "owner_id": "241647851765",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}